# ChangeLog for gnome-base/libgnomekbd
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomekbd/ChangeLog,v 1.7 2007/04/21 08:58:22 remi Exp $

*libgnomekbd-2.18.1 (21 Apr 2007)

  21 Apr 2007; Remi Cardona <remi@gentoo.org> +libgnomekbd-2.18.1.ebuild:
  bump to 2.18.1

  13 Apr 2007; Jeroen Roovers <jer@gentoo.org> libgnomekbd-2.18.0.ebuild:
  Marked ~hppa (bug #173279).

  13 Apr 2007; Raúl Porcel <armin76@gentoo.org> libgnomekbd-2.18.0.ebuild:
  Add ~ia64 wrt bug 173279
