@@ -1,4 +1,4 @@
 DIST libgnomekbd-2.18.1.tar.bz2 354094 RMD160 461be2a5926103a28ffc49a63a833e87e7211ca9 SHA1 3ccab6daf54ff7349ccdf2fa675fceebd576bff4 SHA256 23813cea003811d4fc27b64fc97de4b71eb4bc1ef79db725d7fc9e369db253ab
-EBUILD libgnomekbd-2.18.1.ebuild 935 RMD160 a175ff060c8d1c7a3f19b622514076f6a3414513 SHA1 e28aa8c9fad0c92d4719ffe2dd99fc527aac0b01 SHA256 78ea7860240b4b8caeba525587f07b2b1cedb283351d6cb7d277922dcad7ff9b
-MISC ChangeLog 551 RMD160 508190733bc72918f3ad1dcac95938bd540d5da1 SHA1 671401e24cd5c672055348f533cbf92eb540b4c4 SHA256 958dd6628350d8edfac47bb4bf406fffb040bac57f8033e314baad0de3c6521a
+EBUILD libgnomekbd-2.18.1.ebuild 1034 RMD160 cba927ac7ee1ace09d31334846f1aa6a105b762e SHA1 64c81f868e8080f327da38b1e2cfa5eb459ea597 SHA256 debab52cae25d59fb90b71455d01d5aa4f7b363ce2ad7fbda8d3ec3a9cdec150
+MISC ChangeLog 706 RMD160 0904dcbd15159abb88c9aaff2136b995ee8ee161 SHA1 6fe6ad0ada53756f0025e96e4fb1d71d1c2673a5 SHA256 b3096dc333fc992c8785afad1ec3e5153e379e60083a36bfc7c994f84d6e84d4
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
