@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/libgnomekbd
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomekbd/ChangeLog,v 1.7 2007/04/21 08:58:22 remi Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomekbd/ChangeLog,v 1.8 2007/04/30 17:15:18 uberlord Exp $
+
+  30 Apr 2007; Roy Marples <uberlord@gentoo.org> libgnomekbd-2.18.1.ebuild:
+  Added ~x86-fbsd keyword, #176517.
+  Disable -j so it builds on FreeBSD.
 
 *libgnomekbd-2.18.1 (21 Apr 2007)
 
